# dart_port_audio

./: .gitignore
port_audio/: README.md  pubspec.yaml
port_audio/android/: build.gradle  settings.gradle
port_audio/android/src/main/: AndroidManifest.xml
port_audio/android/src/main/kotlin/org/songfei/port_audio/: PortAudioPlugin.kt
port_audio/example/: README.md  pubspec.yaml
port_audio/example/android/app/: build.gradle
port_audio/example/android/app/src/debug/: AndroidManifest.xml
port_audio/example/android/app/src/main/: AndroidManifest.xml
port_audio/example/android/app/src/main/kotlin/org/songfei/port_audio_example/: MainActivity.kt
port_audio/example/ios/Runner/: Info.plist
port_audio/example/ios/Runner.xcodeproj/: project.pbxproj
port_audio/example/lib/: main.dart
port_audio/example/macos/Flutter/: GeneratedPluginRegistrant.swift
port_audio/example/macos/Flutter/ephemeral/: .app_filename  Flutter-Generated.xcconfig  FlutterInputs.xcfilelist  FlutterOutputs.xcfilelist  flutter_export_environment.sh
port_audio/example/macos/Flutter/ephemeral/.symlinks/plugins/: path_provider_macos  port_audio
port_audio/example/macos/Runner.xcodeproj/: project.pbxproj
port_audio/example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
port_audio/example/macos/Runner.xcodeproj/xcuserdata/songfei.xcuserdatad/xcschemes/: xcschememanagement.plist
port_audio/example/macos/Runner.xcworkspace/xcuserdata/songfei.xcuserdatad/: UserInterfaceState.xcuserstate
port_audio/example/macos/Runner/Configs/: AppInfo.xcconfig
port_audio/example/test/: widget_test.dart
port_audio/example/web/: index.html  manifest.json
port_audio/example/windows/: CMakeLists.txt
port_audio/example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
port_audio/example/windows/runner/: Runner.rc  main.cpp
port_audio/ios/: port_audio.podspec
port_audio/ios/Classes/: PortAudioPlugin.h  PortAudioPlugin.m  SwiftPortAudioPlugin.swift
port_audio/lib/: port_audio.dart  port_audio_web.dart
port_audio/lib/src/: audio_device_manager.dart  audio_input_stream.dart  native_library.dart
port_audio/macos/: port_audio.podspec
port_audio/macos/Classes/: PortAudioPlugin.swift
port_audio/macos/Frameworks/port_audio_native.framework/Versions/A/: port_audio_native
port_audio/test/: port_audio_test.dart
port_audio/windows/: CMakeLists.txt  port_audio_plugin.cpp
port_audio/windows/include/port_audio/: port_audio_plugin.h
port_audio_native/: CMakeLists.txt
port_audio_native/lib/portaudio/windows/: portaudio.lib
port_audio_native/src/: audio_device_manager.c  audio_device_manager.h  audio_input_stream.c  audio_input_stream.h  common.h
